[package]
name = "rbgp"
version = "0.1.0"
authors = ["Tabitha Rollins <tabitha@keyneston.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.4", features = ["full"] }
futures = "0.3.1"
chrono = "0.4.10"
byteorder = "1.3.2"